# mangaloader-epub-postprocess

./: .gitignore  ARCHITECTURE.md  DECISIONS.md  LICENSE  PROJECT_BRIEF.md  README.md  REQUIREMENTS.md  STATE.md  TASKS.md
apps/copymanga-headless-lite/: README.md  copymanga_downloader.py
apps/copymanga-headless-rs/: Cargo.toml  README.md
apps/copymanga-headless-rs/src/: account_pool.rs  config.rs  copy_client.rs  download.rs  errors.rs  main.rs  responses.rs
apps/manga-pipeline-lite/: README.md  config.example.json  config.pi5.json  install-pi.sh  pipeline.py
apps/manga-pipeline-lite/postprocess/: manga_packager.py
docs/: import-review.md
docs/plans/: 2026-03-16-mangaepubautomation-pi-lightweight.md  2026-03-16-project-bootstrap.md  2026-03-18-copymanga-headless-lite-design.md  2026-03-18-manga-pipeline-lite-product-design.md  2026-03-18-manga-pipeline-lite-product-hardening.md  2026-03-18-raspberry-pi-delivery-kit.md
scripts/: run_wsl_copymanga_to_epub.sh  verify_wsl_copymanga_headless.sh  verify_wsl_packager.sh
skills/manga-epub-packager-lite/: SKILL.md
skills/manga-epub-packager-lite/assets/: example_asset.txt
skills/manga-epub-packager-lite/references/: api_reference.md  pi-wsl-setup.md  smoke-test.md  workflow.md
skills/manga-epub-packager-lite/scripts/: example.py  make_merge_plan.py
