[package]
name = "copymanga-headless-rs"
version = "0.1.0"
edition = "2021"
description = "Headless CopyManga downloader that reuses upstream core behavior"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22"
bytes = "1.8.0"
chrono = "0.4.38"
clap = { version = "4.5.23", features = ["derive"] }
dirs = "6.0.0"
fake = "3.0.1"
image = { version = "0.25.2", default-features = false, features = ["jpeg", "webp"] }
parking_lot = { version = "0.12.3", features = ["send_guard"] }
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["native-tls-vendored", "gzip"], default-features = false }
reqwest-middleware = "0.4.0"
reqwest-retry = "0.7.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.41.0", features = ["full"] }
